# htmlminer

./: .env.template  .gitignore  README.md  config.json  pyproject.toml  reproduce_tokens.py  results.csv  results.json  summary.csv  test_urls.md
.github/workflows/: test_windows.yml
scripts/: validate_ci_results.py
src/htmlminer/: __init__.py  _version.py  agent.py  crawler.py  database.py  firecrawl_agent.py  formatting.py  graph_callbacks.py  graph_nodes.py  graph_state.py  graph_workflow.py  main.py  storage.py
tests/: test_deepmind_integration.py  test_firecrawl_agent.py  test_formatting.py  test_model_tier.py
